# webguard

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  fly.toml  fly.worker.toml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  Dockerfile.worker.prod  alembic.ini  prestart.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_users_table.py  0002_add_scans_table.py  0003_add_domain_ownership_table.py  0004_add_scheduled_scans_table.py  0005_add_webhooks_table.py  0006_add_scan_auth_config.py  0007_add_user_totp_fields.py  0008_add_api_keys_table.py  0009_add_audit_events_table.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/core/: config.py  crypto.py  limiter.py  security.py
backend/app/db/: session.py
backend/app/repositories/: api_key.py  audit.py  domain.py  scan.py  scheduled_scan.py  user.py  webhook.py
backend/app/scanners/: base.py  cookies.py  cors.py  xss.py  (+11 more)
backend/tests/: conftest.py  test_api_keys.py  test_audit_api.py  test_audit_repository.py  test_audit_service.py  test_auth.py  test_auth_scans.py  test_celery_tasks.py  test_cors_scanner.py  test_domains.py  test_email.py  test_health.py  test_phase1_scanners.py  test_phase2_scanners.py  test_rate_limiting.py  test_reports.py  test_scan_diff.py  test_scan_recovery.py  test_scanners.py  test_scans.py  test_scheduled_runner.py  test_scheduled_scans.py  test_security_txt_scanner.py  test_totp.py  test_webhooks.py
(+130 files in other folders)
